<resources>
    <string name="app_name">Notifications</string>
    <string name="main_title_message">Starting Notifications</string>
    <string name="displayProfileSubHeading">SubHeading</string>
    <string name="displayProfileContent">Content</string>
    <string name="displayProfileHeading">Heading</string>
    <string name="stop">STOP</string>
    <string name="start">START</string>
    <string name="test">TEST</string>
    <string name="ble_connected">Connected</string>
    <string name="ble_disconnected">Disconnected</string>
    <string name="textBleBroadcast">Broadcasting</string>
    <string name="btnBack">Back</string>
    <string name="textRequireWifi">Need Wifi</string>
    <string name="cameraTakePhoto">Taking a Photo</string>
    <string name="cameraPreview">Camera Preview</string>
    <string name="cameraRecordingStarting">Recording Starting</string>
    <string name="cameraRecordingStopping">Recording Stopping</string>
    <string name="cameraRecording">Recording In Progress</string>
    <string name="textImageReview">Image Review</string>
    <string name="textVideoReview">Video Review</string>
    <string name="displayMcqRadio">Option</string>
    <string name="todo">TODO</string>
</resources>
