<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="com.hci.nip.android.ui.DisplayNotificationActivity">

    <!-- NOTE: Epson BT-300 display 1280RGBx720, 24bit color, mdpi -->

    <!--    ref: https://designguidelines.withgoogle.com/android-tv/style/typography.html#typography-style-->
    <!--    ref: https://material.io/develop/android/theming/typography-->
    <!--    ref: https://learnui.design/blog/android-material-design-font-size-guidelines.html-->

    <!--    limit characters: https://stackoverflow.com/questions/9149846/can-i-limit-textviews-number-of-characters-->

    <!--    App icon size: https://www.creativefreedom.co.uk/icon-designers-blog/android-4-1-icon-size-guide-made-simple/,-->
    <!--    https://documentation.onesignal.com/docs/customize-notification-icons-->


    <RelativeLayout
        android:id="@+id/layoutCue"
        android:layout_width="@dimen/cueLayoutWidth"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/layoutNotification"
        android:layout_width="@dimen/notificationLayoutWidth"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:visibility="visible">

        <TextView
            android:id="@+id/displayAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/notificationMarginStart"
            android:layout_marginTop="0sp"
            android:layout_toEndOf="@+id/displayAppIcon"
            android:background="@color/hud_transparent"
            android:text="@string/displayProfileHeading"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/appNameSize1" />

        <ImageView
            android:id="@+id/displayAppIcon"
            android:layout_width="@dimen/appIconSize1"
            android:layout_height="@dimen/appIconSize1"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/notificationMarginStart"
            android:layout_marginTop="2sp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_android_notif" />

        <TextView
            android:id="@+id/displayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            android:layout_marginStart="@dimen/notificationMarginStart"
            android:layout_marginTop="22sp"
            android:background="@color/hud_transparent"
            android:text="@string/displayProfileHeading"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/titleSize1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/displayMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/displayTitle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/notificationMarginStart"
            android:layout_marginTop="2dp"
            android:background="@color/hud_transparent"
            android:text="@string/displayProfileContent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/messageSize1" />

        <ImageView
            android:id="@+id/displayLargeIcon"
            android:layout_width="@dimen/largeIconSize1"
            android:layout_height="@dimen/largeIconSize1"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25sp"
            android:layout_marginEnd="@dimen/notificationMarginEnd"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_android_notif" />



    </RelativeLayout>

</RelativeLayout>